<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/corner"
        android:src="@drawable/chat_background"
        android:rotation="180"
        android:clickable="false"
        android:focusable="false"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="29dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp">
        <!--TODO: comment for production-->
        <Spinner
            android:id="@+id/model_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/roboto"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="36dp"
            android:spinnerMode="dropdown" />
        <!--TODO: comment for production-->
        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="gemini-1.5-pro will be used by default."
            android:hint="@string/enter_text"
            android:inputType="text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="0dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/message_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingTop="30dp"
            android:fontFamily="@font/cinzel"
            android:textStyle="bold"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:background="@drawable/send_chat_background"
            android:layout_marginBottom="45dp">

            <EditText
                android:id="@+id/message_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:layout_gravity="bottom|start"
                android:autofillHints="Start typing..."
                android:hint="@string/enter_message"
                android:textColorHint="@color/mid_transparent_white"
                android:inputType="textLongMessage"
                android:fontFamily="@font/outfit_regular"
                android:textSize="22.5sp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/white"
                android:background="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/send_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/send_button"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@drawable/send"
                android:layout_marginEnd="27dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>